# QT_neuro_server

./: .gitignore  CMakeLists.txt  main.cpp
include/: CommunicationMaster.h  NeuronetMaster.h
src/: CommunicationMaster.cpp  NeuronetMaster.cpp
